--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
-    "sequelize": "^6.20.1"
+    "sequelize": "^6.20.1",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
